@@ -102,58 +102,47 @@
 
 									horizontal_scrollbar_mode = "never"
 
-									[list_definition]
+									[page_definition]
 
 										[row]
+											grow_factor = 0
 
 											[column]
+												border = "all"
+												border_size = 5
+												horizontal_alignment = "center"
+												vertical_alignment = "top"
 
-												[grid]
+												[label]
+													id = "description"
+													definition = "default"
 
-													[row]
-														grow_factor = 1
-
-														[column]
-															border = "all"
-															border_size = 5
-															vertical_alignment = "top"
-
-															[label]
-																id = "description"
-																definition = "default"
-
-																wrap = "true"
-															[/label]
-
-														[/column]
-
-													[/row]
-
-													[row]
-														grow_factor = 1
-
-														[column]
-															border = "all"
-															border_size = 5
-															horizontal_alignment = "center"
-															vertical_alignment = "top"
-
-															[image]
-																id = "image"
-																definition = "default"
-															[/image]
-
-														[/column]
-
-													[/row]
-
-												[/grid]
+													wrap = "true"
+												[/label]
 
 											[/column]
 
 										[/row]
 
-									[/list_definition]
+										[row]
+											grow_factor = 1
+
+											[column]
+												border = "all"
+												border_size = 5
+												horizontal_alignment = "center"
+												vertical_alignment = "top"
+
+												[image]
+													id = "image"
+													definition = "default"
+												[/image]
+
+											[/column]
+
+										[/row]
+
+									[/page_definition]
 
 								[/multi_page]
 
